# Easy2D

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  compile.sh  easy2d.pc.in
.cache/clangd/index/: application.c.23DD9B6C272AE677.idx  application.h.B950E024F5797665.idx  glad.c.6D1237F3E9FD5770.idx  glad.h.C980EAEEC65601EF.idx  glfw3.h.051C95C4C0C87085.idx  khrplatform.h.C246C6B829131A9A.idx  log.h.A5D00E73EC9429E8.idx  renderer.c.C4AF5B19D84594D2.idx  renderer.h.977E1FB660494978.idx  resource.c.3533AF014532C123.idx  resource.h.CB2FD95EE4FA5168.idx  shader.c.F36F2A223D977276.idx  shader.h.46AA92BDF22A6D94.idx  sprite.c.F341CAD95978B9B9.idx  sprite.h.5D6BFEE272FFE6D2.idx  stb_image.c.9DC4D6EE2CF30236.idx  stb_image.h.E14051A9101C7A6B.idx  texture.c.DB6E9AD00725B720.idx  texture.h.D9F4771C1DB439F8.idx  util.h.0DA54C8B9C019E99.idx  window.c.CF58893B7F7D689D.idx  window.h.940B1EDE40039A9E.idx
easy2d/: TODO.txt
easy2d/include/: aabb.h  application.h  camera.h  easy2d.h  input.h  log.h  renderer.h  resource.h  scene.h  script.h  shader.h  sprite.h  texture.h  transform.h  util.h  window.h
easy2d/include/math/: math.h
easy2d/include/stl/: vector.h
easy2d/src/: aabb.c  application.c  camera.c  input.c  renderer.c  resource.c  scene.c  script.c  shader.c  sprite.c  texture.c  transform.c  window.c
easy2d/src/math/: math.c
easy2d/src/stl/: vector.c
lib/: libglfw.3.3.dylib
sbox/res/: simple.fs  simple.vs
sbox/src/: main.cpp
